# datafusion-schema-evolution-example

./: Cargo.toml
data/: v1.parquet  v2.parquet
src/: main.rs
