[package]
name = "datafusion-schema-evolution-exmaple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
# build commit: 741df36fa0e401ec61d5441590728bc653ae0924
datafusion = { path = "../arrow-datafusion/datafusion" }
arrow = "7.0.0"
tokio = "1.0"
